@@ -9,4 +9,5 @@
 /ChangeLog
 /build
 /dist
+/how-to-make-a-release.txt
 /tmp
