@@ -7,11 +7,6 @@ import helper as Mhelper
 
 class GeneralTests(unittest.TestCase):
 
-    @unittest.skipIf('TRAVIS' in os.environ or
-                     (sys.version_info[0] == 3 and
-                      sys.version_info[1] != 4),
-                     "FIXME: figure out why this doesn't work in travis"
-                     " and make fix up debugger to skip local code")
     def test_step(self):
         """Test stepping, set skip, set trace"""
         result=Mhelper.run_debugger(testname='step',
